Related: fdo#53337 Maybe this is a typeinfo visibility problem

Change-Id: I024de5b400d0f7a443d4cce7bfe4e88841e6049b